Fixes media library picker field RTL alignment issue.
Fixes #7308

--- a/src/Orchard.Web/Modules/Orchard.MediaLibrary/Styles/media-library-picker-admin.css
+++ b/src/Orchard.Web/Modules/Orchard.MediaLibrary/Styles/media-library-picker-admin.css
@@ -22,6 +22,10 @@
     margin-right: 4px;
 }
 
+.dir-rtl .media-library-picker ul li {
+    float: right;
+}
+
 .media-library-picker {
     margin-bottom: 10px;
 }
